feat(tree-sitter): tree sitter api might useless since it is not as powerful as i thought